# tutorials

./: README.md  Vagrantfile
cypress-docker/: docker-compose.yml  vetur.config.js
cypress-docker/backend/: Dockerfile  pyproject.toml
cypress-docker/backend/accounts/: urls.py  views.py
cypress-docker/backend/backend/: settings.py
cypress-docker/frontend/: Dockerfile  nuxt.config.js  package.json
cypress-docker/frontend/pages/: index.vue
django-nuxtjs-authentication/: setting-up-frontend.md
django_pytest_tutorial/: README.md  manage.py  pyproject.toml  pytest.ini
django_pytest_tutorial/accounts/: models.py
django_pytest_tutorial/accounts/migrations/: 0001_initial.py  0002_auto_20201230_1438.py
django_pytest_tutorial/django_pytest_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
django_pytest_tutorial/notes/: models.py
django_pytest_tutorial/notes/migrations/: 0001_initial.py  0002_note_created_on.py
django_pytest_tutorial/tests/: conftest.py
django_pytest_tutorial/tests/accounts/: test_models.py
how-to-get-tailwind-working-with-nuxt/: README.md  nuxt.config.js  package-lock.json  package.json
how-to-get-tailwind-working-with-nuxt/assets/css/: main.css  tailwind.css
how-to-get-tailwind-working-with-nuxt/pages/: index.vue
tools/Vagrant/: bootstrap  setup-deps
tools/shell/: env-vars
