[tool.poetry]
name = "django_pytest_tutorial"
version = "0.1.0"
description = "Working with django and pytest"
authors = ["Diptesh Choudhuri <ignisda2001@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
validate_email = "^1.3"
requests = "^2.25.1"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.8.4", allow-prereleases = true}
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
